--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ngx-materialize": "^6.1.3",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
+    "underscore": "^1.9.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
